packages/parser/src/language/useCase/.antlr/UsecaseParser.java
// Generated from /home/omkar-kadam/Public/mermaid/mermaid/packages/parser/src/language/useCase/Usecase.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UsecaseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		USECASE_START=1, ACTOR=2, SYSTEM_BOUNDARY=3, END=4, ARROW=5, LABELED_ARROW=6, 
		AT=7, LBRACE=8, RBRACE=9, LPAREN=10, RPAREN=11, COMMA=12, COLON=13, STRING=14, 
		IDENTIFIER=15, NEWLINE=16, WS=17, COMMENT=18;
	public static final int
		RULE_usecaseDiagram = 0, RULE_statement = 1, RULE_relationship = 2, RULE_actorRelationship = 3, 
		RULE_target = 4, RULE_nodeDefinition = 5, RULE_nodeId = 6, RULE_nodeLabel = 7, 
		RULE_actorName = 8, RULE_systemBoundary = 9, RULE_systemBoundaryMetadata = 10, 
		RULE_boundaryContent = 11, RULE_useCase = 12, RULE_boundaryName = 13, 
		RULE_useCaseName = 14, RULE_actor = 15, RULE_actorList = 16, RULE_actorDefinition = 17, 
		RULE_metadata = 18, RULE_metadataContent = 19, RULE_metadataPair = 20, 
		RULE_metadataKey = 21, RULE_metadataValue = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"usecaseDiagram", "statement", "relationship", "actorRelationship", "target", 
			"nodeDefinition", "nodeId", "nodeLabel", "actorName", "systemBoundary", 
			"systemBoundaryMetadata", "boundaryContent", "useCase", "boundaryName", 
			"useCaseName", "actor", "actorList", "actorDefinition", "metadata", "metadataContent", 
			"metadataPair", "metadataKey", "metadataValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'usecase'", "'actor'", "'systemBoundary'", "'end'", null, null, 
			"'@'", "'{'", "'}'", "'('", "')'", "','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "USECASE_START", "ACTOR", "SYSTEM_BOUNDARY", "END", "ARROW", "LABELED_ARROW", 
			"AT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COMMA", "COLON", "STRING", 
			"IDENTIFIER", "NEWLINE", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Usecase.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UsecaseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsecaseDiagramContext extends ParserRuleContext {
		public TerminalNode USECASE_START() { return getToken(UsecaseParser.USECASE_START, 0); }
		public TerminalNode EOF() { return getToken(UsecaseParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(UsecaseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UsecaseParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public UsecaseDiagramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usecaseDiagram; }
	}

	public final UsecaseDiagramContext usecaseDiagram() throws RecognitionException {
		UsecaseDiagramContext _localctx = new UsecaseDiagramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_usecaseDiagram);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(USECASE_START);
			setState(50);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(47);
					match(NEWLINE);
					}
					} 
				}
				setState(52);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 98316L) != 0)) {
				{
				{
				setState(53);
				statement();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ActorContext actor() {
			return getRuleContext(ActorContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(UsecaseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UsecaseParser.NEWLINE, i);
		}
		public SystemBoundaryContext systemBoundary() {
			return getRuleContext(SystemBoundaryContext.class,0);
		}
		public SystemBoundaryMetadataContext systemBoundaryMetadata() {
			return getRuleContext(SystemBoundaryMetadataContext.class,0);
		}
		public UseCaseContext useCase() {
			return getRuleContext(UseCaseContext.class,0);
		}
		public RelationshipContext relationship() {
			return getRuleContext(RelationshipContext.class,0);
		}
		public ActorRelationshipContext actorRelationship() {
			return getRuleContext(ActorRelationshipContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			int _alt;
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				actor();
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(62);
						match(NEWLINE);
						}
						} 
					}
					setState(67);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				systemBoundary();
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(69);
						match(NEWLINE);
						}
						} 
					}
					setState(74);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				systemBoundaryMetadata();
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(76);
						match(NEWLINE);
						}
						} 
					}
					setState(81);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				useCase();
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83);
						match(NEWLINE);
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				relationship();
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(90);
						match(NEWLINE);
						}
						} 
					}
					setState(95);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(96);
				actorRelationship();
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(97);
						match(NEWLINE);
						}
						} 
					}
					setState(102);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(103);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationshipContext extends ParserRuleContext {
		public ActorNameContext actorName() {
			return getRuleContext(ActorNameContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(UsecaseParser.ARROW, 0); }
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TerminalNode LABELED_ARROW() { return getToken(UsecaseParser.LABELED_ARROW, 0); }
		public RelationshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationship; }
	}

	public final RelationshipContext relationship() throws RecognitionException {
		RelationshipContext _localctx = new RelationshipContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_relationship);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				actorName();
				setState(107);
				match(ARROW);
				setState(108);
				target();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				actorName();
				setState(111);
				match(LABELED_ARROW);
				setState(112);
				target();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActorRelationshipContext extends ParserRuleContext {
		public TerminalNode ACTOR() { return getToken(UsecaseParser.ACTOR, 0); }
		public ActorNameContext actorName() {
			return getRuleContext(ActorNameContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(UsecaseParser.ARROW, 0); }
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TerminalNode LABELED_ARROW() { return getToken(UsecaseParser.LABELED_ARROW, 0); }
		public ActorRelationshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorRelationship; }
	}

	public final ActorRelationshipContext actorRelationship() throws RecognitionException {
		ActorRelationshipContext _localctx = new ActorRelationshipContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actorRelationship);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				match(ACTOR);
				setState(117);
				actorName();
				setState(118);
				match(ARROW);
				setState(119);
				target();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				match(ACTOR);
				setState(122);
				actorName();
				setState(123);
				match(LABELED_ARROW);
				setState(124);
				target();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TargetContext extends ParserRuleContext {
		public UseCaseNameContext useCaseName() {
			return getRuleContext(UseCaseNameContext.class,0);
		}
		public NodeDefinitionContext nodeDefinition() {
			return getRuleContext(NodeDefinitionContext.class,0);
		}
		public TargetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_target; }
	}

	public final TargetContext target() throws RecognitionException {
		TargetContext _localctx = new TargetContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_target);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				useCaseName();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				nodeDefinition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeDefinitionContext extends ParserRuleContext {
		public NodeIdContext nodeId() {
			return getRuleContext(NodeIdContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(UsecaseParser.LPAREN, 0); }
		public NodeLabelContext nodeLabel() {
			return getRuleContext(NodeLabelContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(UsecaseParser.RPAREN, 0); }
		public NodeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeDefinition; }
	}

	public final NodeDefinitionContext nodeDefinition() throws RecognitionException {
		NodeDefinitionContext _localctx = new NodeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nodeDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			nodeId();
			setState(133);
			match(LPAREN);
			setState(134);
			nodeLabel();
			setState(135);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeIdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UsecaseParser.IDENTIFIER, 0); }
		public NodeIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeId; }
	}

	public final NodeIdContext nodeId() throws RecognitionException {
		NodeIdContext _localctx = new NodeIdContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nodeId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NodeLabelContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(UsecaseParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(UsecaseParser.IDENTIFIER, i);
		}
		public List<TerminalNode> WS() { return getTokens(UsecaseParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(UsecaseParser.WS, i);
		}
		public TerminalNode STRING() { return getToken(UsecaseParser.STRING, 0); }
		public NodeLabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeLabel; }
	}

	public final NodeLabelContext nodeLabel() throws RecognitionException {
		NodeLabelContext _localctx = new NodeLabelContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nodeLabel);
		int _la;
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(IDENTIFIER);
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(140);
					match(WS);
					setState(141);
					match(IDENTIFIER);
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ActorNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UsecaseParser.IDENTIFIER, 0); }
		public ActorNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorName; }
	}

	public final ActorNameContext actorName() throws RecognitionException {
		ActorNameContext _localctx = new ActorNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_actorName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemBoundaryContext extends ParserRuleContext {
		public TerminalNode SYSTEM_BOUNDARY() { return getToken(UsecaseParser.SYSTEM_BOUNDARY, 0); }
		public BoundaryNameContext boundaryName() {
			return getRuleContext(BoundaryNameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(UsecaseParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(UsecaseParser.RBRACE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(UsecaseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UsecaseParser.NEWLINE, i);
		}
		public List<BoundaryContentContext> boundaryContent() {
			return getRuleContexts(BoundaryContentContext.class);
		}
		public BoundaryContentContext boundaryContent(int i) {
			return getRuleContext(BoundaryContentContext.class,i);
		}
		public TerminalNode END() { return getToken(UsecaseParser.END, 0); }
		public SystemBoundaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemBoundary; }
	}

	public final SystemBoundaryContext systemBoundary() throws RecognitionException {
		SystemBoundaryContext _localctx = new SystemBoundaryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_systemBoundary);
		int _la;
		try {
			int _alt;
			setState(185);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				match(SYSTEM_BOUNDARY);
				setState(153);
				boundaryName();
				setState(154);
				match(LBRACE);
				setState(158);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(155);
						match(NEWLINE);
						}
						} 
					}
					setState(160);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER || _la==NEWLINE) {
					{
					{
					setState(161);
					boundaryContent();
					}
					}
					setState(166);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(167);
				match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(SYSTEM_BOUNDARY);
				setState(170);
				boundaryName();
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(171);
						match(NEWLINE);
						}
						} 
					}
					setState(176);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENTIFIER || _la==NEWLINE) {
					{
					{
					setState(177);
					boundaryContent();
					}
					}
					setState(182);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(183);
				match(END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemBoundaryMetadataContext extends ParserRuleContext {
		public BoundaryNameContext boundaryName() {
			return getRuleContext(BoundaryNameContext.class,0);
		}
		public TerminalNode AT() { return getToken(UsecaseParser.AT, 0); }
		public TerminalNode LBRACE() { return getToken(UsecaseParser.LBRACE, 0); }
		public MetadataContentContext metadataContent() {
			return getRuleContext(MetadataContentContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(UsecaseParser.RBRACE, 0); }
		public SystemBoundaryMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemBoundaryMetadata; }
	}

	public final SystemBoundaryMetadataContext systemBoundaryMetadata() throws RecognitionException {
		SystemBoundaryMetadataContext _localctx = new SystemBoundaryMetadataContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_systemBoundaryMetadata);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			boundaryName();
			setState(188);
			match(AT);
			setState(189);
			match(LBRACE);
			setState(190);
			metadataContent();
			setState(191);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoundaryContentContext extends ParserRuleContext {
		public UseCaseContext useCase() {
			return getRuleContext(UseCaseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(UsecaseParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UsecaseParser.NEWLINE, i);
		}
		public BoundaryContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boundaryContent; }
	}

	public final BoundaryContentContext boundaryContent() throws RecognitionException {
		BoundaryContentContext _localctx = new BoundaryContentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_boundaryContent);
		try {
			int _alt;
			setState(201);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(193);
				useCase();
				setState(197);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(194);
						match(NEWLINE);
						}
						} 
					}
					setState(199);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
				}
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(200);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseCaseContext extends ParserRuleContext {
		public UseCaseNameContext useCaseName() {
			return getRuleContext(UseCaseNameContext.class,0);
		}
		public UseCaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useCase; }
	}

	public final UseCaseContext useCase() throws RecognitionException {
		UseCaseContext _localctx = new UseCaseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_useCase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			useCaseName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoundaryNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UsecaseParser.IDENTIFIER, 0); }
		public BoundaryNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boundaryName; }
	}

	public final BoundaryNameContext boundaryName() throws RecognitionException {
		BoundaryNameContext _localctx = new BoundaryNameContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_boundaryName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UseCaseNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UsecaseParser.IDENTIFIER, 0); }
		public UseCaseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useCaseName; }
	}

	public final UseCaseNameContext useCaseName() throws RecognitionException {
		UseCaseNameContext _localctx = new UseCaseNameContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_useCaseName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
